<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Form" >

    <TextView
        android:id="@+id/txtViewAnimalType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_animal_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerAnimalType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtViewAnimalType"
        android:layout_below="@+id/txtViewAnimalType" />

    <TextView
        android:id="@+id/txtViewNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerAnimalType"
        android:paddingTop="15dp"
        android:text="@string/txt_animal_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewNameDetails"
        android:ems="10"
        android:hint="@string/hint_name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtViewColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTxtName"
        android:paddingTop="15dp"
        android:text="@string/txt_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroupColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtViewColor"
        android:layout_alignRight="@+id/txtViewColor"
        android:layout_below="@+id/txtViewColor"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/radioBrown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_brown" />

        <RadioButton
            android:id="@+id/radioBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_black" />

        <RadioButton
            android:id="@+id/radioWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_white" />
    </RadioGroup>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/radioGroupColor"
        android:text="@string/btn_done" 
        android:onClick="gotoDetails"/>

</RelativeLayout>
